	- don't build Packagecolor index (yet).
	- python: don't read rpmrc by default.
	- perl: don't read rpmrc by default.
	- add D_(...) i18n marker for debug messages, with default disable.
	- protottype headerGetEntry 4th arg as void *, not void **.
	- build popt as separate package.
	- install rpm into /usr/bin, not /bin.
	- eliminate rpm executable helpers.
	- update library version.
	
4.4.8 -> 4.4.9:
	- start rpm-4.4.9 devel.
	- replace rpm2cpio with a shell script (#229422).
	- debugedit: canonicalize_path was broken (#232222).
	- permit clean scriptlet element overrides.
	- add RPMTAG_REPOTAG.
	- non-linux: avoid all mutexes if waitpid is used for reaping.
	- use pipe(2) for SIGCHLD receipt signalling.
	- python: teach labelCompare that missing epoch is same as 0 (#227860).
	- add source rpm file attributes, eliminate RPMBUILD_ISFOO.
	- populate sourceHeader with build restrictions early instead.
	- add --specsrpm to permit querying parsed source rpm header.
	- populate sourceHeader with source/patch tags for query (#227513).
	- make sure srpm header is initialized exactly once while refactoring.
	- add Keywords: and BuildPlatforms: syntax.
	- perform an RPMTAG_ICON tracheotomy.
	- perl: extract dependencies from *.pm iff on /usr/lib* (#234691).
	- refactor header subroutines out of -lrpmlib into -lrpmdb.
	- add RPMTAG_PACKAGECOLOR at install time, retrofit on --rebuilddb.
	- add Packagecolor index to handle multilib scriptlet instance counts.
	- convert indices with ordering properties from DB_HASH to DB_BTREE.
	- add findfplistexclude.diff patch from <mls@suse.de> (#140055).
	- add taggedfileindex.diff patch from <mls@suse.de> (#103204).
	- rework above 2 patches to be runtime, not compile time, configgerable.
	- open existing rpmdb indices with either DB_BTREE or DB_HASH.
	- don't add RPMTAG_RHNPLATFORM to packages and headers.
	- stop adding ancient rpmlib(...) tracking dependencies to headers.
	- python: eliminate rhnLoad/rhnUnload methods.