@@ -867,9 +867,10 @@ assert(dig != NULL);
 
 		if (sigp->version != 3 && sigp->version != 4) {
 		    rpmError(RPMERR_SIGVFY,
-		_("only V3 or V4 signatures can be verified, skipping V%u signature\n"),
-			sigp->version);
-		    continue;
+		_("skipping package %s with unverifiable V%u signature\n"),
+			fn, sigp->version);
+		    res++;
+		    goto exit;
 		}
 		/*@switchbreak@*/ break;
 	    case RPMSIGTAG_SHA1:
